# This file is part of Master Password.
#
# Master Password is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Master Password is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Master Password. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "mpw-rs"
version = "2.4.0"
authors = [
    "Rahul De <rahul080327@gmail.com>",
    "Maarten Billemont <lhunath@lyndir.com>"
]

[dependencies]
argon2rs = "0.2.5"
bcrypt = "0.1" # Only for benchmark
clap = "2"
rpassword = "0.3.1"
ring = "0.7"
ring-pwhash = "0.1"
