# This file is part of Master Password.
#
# Master Password is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Master Password is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Master Password. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "mpw"
version = "2.4.0"
description = """Master Password is an algorithm used to generate unique
passwords for websites, email accounts, or anything else based only on easily
reproducible input."""
documentation = "http://masterpasswordapp.com/algorithm.html"
homepage = "http://masterpasswordapp.com/"
repository = "https://github.com/lispyclouds/mpw-rs.git"
readme = "README.md"
license = "GPLv3"
authors = [
    "Rahul De <rahul080327@gmail.com>",
    "Maarten Billemont <lhunath@lyndir.com>"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'abort'

[dependencies]
argon2rs = "0.2" # Only for mpw_next
bcrypt = "0.1"     # Only for benchmark
clap = "2"
rpassword = "0.3"
ring = "0.7"
ring-pwhash = "0.1"
